Fix inconsistent spacing between messages. Ask Knighty for advice on the other CSS error.

--- a/app/assets/stylesheets/web.session.css.sass
+++ b/app/assets/stylesheets/web.session.css.sass
@@ -511,7 +511,6 @@ $messages-input-padding: 10px
   .message-box
     border-top: 1px solid #EFEFEF
     position: relative
-    margin-bottom: emCalc(-4px)
 
     &:after, &:before
       right: 100%
